# kms

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  serve.sh
.claude/hooks/: session-start.sh
data/trainsets/: README.md  entity_attributor.jsonl  entity_grouper.jsonl  extractor.jsonl
docs/: ARCHITECTURE.md  HANDOFF.md  UNIFIED-KG.md
docs/automathkg/: markdown.md
docs/autoschemakg/: markdown.md
robustness_test/: .gitignore  REPORT.md
robustness_test/runs/combinatorics_levin/: document.md  entities.json  nodes.json
robustness_test/runs/logic_hammack_truthtables/: document.md  entities.json  nodes.json
robustness_test/runs/nt_stein_congruences/: document.md  entities.json  nodes.json
robustness_test/runs/ode_lebl_diffyqs/: document.md  entities.json  nodes.json
robustness_test/runs/prob_grinstead_snell/: document.md  entities.json  nodes.json
robustness_test/runs/topology_morris/: document.md  entities.json  nodes.json
robustness_test/traces/combinatorics_levin/: corrector.jsonl  definition_bodylist.jsonl  definition_finder.jsonl  definition_identify.jsonl  extractor.jsonl  instruction_finder.jsonl  problem_finder.jsonl  problem_identify.jsonl  seam_merger.jsonl  splitter.jsonl  theorem_finder.jsonl  theorem_identify.jsonl  theorem_proof_bodylist.jsonl  theorem_statement_bodylist.jsonl
robustness_test/traces/logic_hammack_truthtables/: corrector.jsonl  definition_finder.jsonl  distributor.jsonl  extractor.jsonl  instruction_finder.jsonl  problem_finder.jsonl  problem_identify.jsonl  seam_merger.jsonl  splitter.jsonl  theorem_finder.jsonl
robustness_test/traces/nt_stein_congruences/: corrector.jsonl  definition_bodylist.jsonl  definition_finder.jsonl  definition_identify.jsonl  extractor.jsonl  instruction_finder.jsonl  problem_finder.jsonl  seam_merger.jsonl  splitter.jsonl  theorem_finder.jsonl  theorem_identify.jsonl  theorem_proof_bodylist.jsonl  theorem_statement_bodylist.jsonl
robustness_test/traces/ode_lebl_diffyqs/: corrector.jsonl  definition_finder.jsonl  extractor.jsonl  instruction_finder.jsonl  problem_finder.jsonl  problem_identify.jsonl  seam_merger.jsonl  splitter.jsonl  theorem_finder.jsonl  theorem_identify.jsonl  theorem_statement_bodylist.jsonl
robustness_test/traces/prob_grinstead_snell/: corrector.jsonl  definition_bodylist.jsonl  definition_finder.jsonl  definition_identify.jsonl  extractor.jsonl  instruction_finder.jsonl  problem_finder.jsonl  problem_identify.jsonl  seam_merger.jsonl  splitter.jsonl  theorem_finder.jsonl
robustness_test/traces/topology_morris/: corrector.jsonl  definition_bodylist.jsonl  definition_finder.jsonl  definition_identify.jsonl  extractor.jsonl  instruction_finder.jsonl  problem_finder.jsonl  (+4 more)
scripts/: pdf_to_segments.py
src/kms/: __init__.py  cli.py  pipeline.py
src/module/: __init__.py  assembler.py  capture.py  corrector.py  definition_attributor.py  definition_finder.py  docling_processor.py  entity_attributor.py  entity_grouper.py  exercise_governor.py  exercise_refiner.py  exercise_splitter.py  extractor.py  image_filter.py  instruction_distributor.py  instruction_governor.py  instruction_refiner.py  llm.py  mistral_ocr.py  ocr.py  optimize.py  picture_extractor.py  pipeline.py  problem_attributor.py  problem_finder.py  problem_refiner.py  seam_merger.py  state.py  theorem_attributor.py  theorem_finder.py  tracing.py  trainsets.py
tests/: conftest.py  test_corrector.py  test_definition_attributor.py  test_definition_finder.py  test_definition_referencer.py  test_entity_attributor.py  test_entity_grouper.py  test_exercise_governor.py  test_exercise_splitter.py  test_flatten_and_assemble.py  test_flatten_entities.py  test_graph_concepts.py  test_graph_db.py  test_graph_db_integration.py  test_graph_entities.py  test_graph_nodes.py  test_graph_persister.py  test_graph_procedures.py  test_graph_references.py  test_graph_schema.py  test_graph_uses.py  test_graph_writer.py  test_instruction_distributor.py  test_instruction_finder.py  test_mistral_ocr.py  test_node_stages.py  test_optimize.py  test_pipeline_output.py  test_pipeline_wiring.py  test_problem_attributor.py  test_problem_finder.py  test_problem_referencer.py  test_theorem_attributor.py  test_theorem_finder.py  test_theorem_referencer.py  test_trainsets.py
training/: README.md  capture_splitter.py
training/distributor/: compile.py  dataset.py  metric.py
training/splitter/: compile.py  dataset.py  metric.py
(+186 files in other folders)
