[project]
name = "kms"
version = "0.1.0"
description = "knowledge management and metacognitive learning system"
requires-python = ">=3.12, <=3.14"
# Light, portable core: the LLM pipeline (OCR/extract/seam/refine/govern/entity) and
# its runtime. Everything here is CPU-only and installs in seconds — this is what
# `uv sync` installs and what web sessions need.
dependencies = [
  "pydantic>=2.0",
  "dspy-ai>=3.2.1",
  "langgraph>=0.2",
  "fsrs>=6.3.1",
  "neo4j>=6.2.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
# No-GPU document front-end: the Mistral OCR API turns each page into markdown +
# extracted figures, and pypdfium2 rasterizes pages so the correction pass has an image
# to check the transcription against. CPU-only, installs in seconds:
#   uv sync --extra mistral
mistral = [
  "pypdfium2>=4",
  "pillow>=10",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
package = false  # Disables the local build requirement entirely!

